@@ -1,3 +1,8 @@
 Story: Goto second page
 Given we are on the first page
 Then goto the second page
+
+Story: Test Tapping a button
+Given I am on the second page
+Then I can tap a button
+and see "hello" in the label
